2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Michael Koch  <konqueror@gmx.de>

        * gnu/java/net/protocol/http/HTTPConnection.java:
        (userAgent): Initialize from system properties.
        (initUserAgent): Removed.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Michael Koch  <konqueror@gmx.de>

        * java/lang/ClassLoader.java:
        Fixed formatting.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-29  Michael Koch  <konqueror@gmx.de>

        * java/net/InetAddress.java
        (aton): Fixed javadoc.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Robert Schuster  <thebohemian@gmx.net>

        * java/beans/FeatureDescriptor.java:
        (getShortDescription): Implemented fallback mechanism and fixed
        documentation (fixes bug #12637).
        (getDisplayName): Dito.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Robert Schuster  <thebohemian@gmx.net>

        * java/beans/Introspector.java: Fixed bug #12624, BeanDescriptors
        will now be set correctly.
        (flushCaches): Now flushes all cached intermediate data.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Michael Koch  <konqueror@gmx.de>

        * javax/swing/JTextArea.java
        (replaceRange): Removed error throwing.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Michael Koch  <konqueror@gmx.de>

        * java/nio/charset/Charset.java
        (providers2): Renamed from 'providers'.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-04-28  Michael Koch  <konqueror@gmx.de>

        * java/security/AccessControlContext.java:
        Reformatted.

	2005-04-28  Andreas Tobler  <a.tobler@schweiz.ch>
