@@ -4,6 +4,15 @@
 
 	2005-04-29  Michael Koch  <konqueror@gmx.de>
 
+        * java/nio/charset/Charset.java
+        (defaultCharset): Reformatted.
+
+2005-05-15  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-04-29  Michael Koch  <konqueror@gmx.de>
+
         * gnu/java/net/protocol/http/HTTPConnection.java:
         (userAgent): Initialize from system properties.
         (initUserAgent): Removed.
